second to the last page

--- a/laravel/resources/views/newevent.html
+++ b/laravel/resources/views/newevent.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="../../public/styles/newhomage.css">
     <link rel="stylesheet" href="../../public/styles/newbiz.css">
     <link rel="stylesheet" href="../../public/styles/newhcd.css">
+    <link rel="stylesheet" type="text/css" href="../../public/styles/newevent.css">
     <link rel="stylesheet" type="text/css" href="../../public/styles/newbiz4bbgr.css">
     <link rel="stylesheet" type="text/css" href="../../public/styles/newaboutus.css">
 </head>
@@ -26,221 +27,98 @@
             <div class="line"></div>
         </div>
     </nav>
-    <div class="absection1-biz">
-        <div class="biz-sub">
-            <div class="logo-biz hide-mobile">
-                <img src="../../public/img/logo (1).png" alt="">
-            </div>
-            <div class="biz-top-holder">
 
-            </div>
-            <div class="biz-top-holder flexed">
-                <div class="biz-img">
-                    <img src="../../public/img//Rectangle 4.png" alt="biz-img" srcset="">
-                </div>
-                <div class="biz-text">
+    <div class="event-section-1">
 
-                    <p class="biz-text-one">
-                        <h1 class="whitetext">BIZ-4-BBGR</h1>
-
-                        <b class="whitetext">BIZ for Bridge-Building and Globalization Re-Set </b>
-                        <br>
-                        <span class="redtext thick">Social inclusion for women & youth:</span>
-                        <br>
-                        <span class="whitetext">
-                            By experience, we see job and wealth creation, and cooperative formation as powerful
-                            strategies to achieving great social impact.
-                        </span>
-                    </p>
-                </div>
-            </div>
+        <div class="logo absolute-position">
+            <img src="../../public/img/logo (1).png" alt="">
         </div>
-        <div class="hcd-list-holder">
-            <ul class="newbizb4g">
-                <li>
-                    <div class="flex-hcd">
-                        <p class="flex-hcd-text">
-                            “With the latest technology in profiling and personality prediction, <span class="redtext">
-                                we source the best</span>. Our
-                            on-line scheduling requests ensure real time communication connects clients to first class
-                            candidates.”
-                        </p>
-                        <div class="flexed top-2">
-                            <button class="custom-btn-ab-1">JOIN BIZ CLUB</button>
-                            <button class="custom-btn-ab-1">JOIN BIZSPHERE </button>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="hcd-list-img">
-                        <img src="../../public//img/Polygon 30.png" alt="">
-                    </div>
-                    <p class="redtext thick padded-white-bg margin-top-1">Social Impact by
-                        Cooperatives</p>
-                </li>
+        <h1>
+            OUR EVENTS
+        </h1>
+        <p class="thin">
+            Exploring the ideas of shaping tomorrow's <br> opportunities
 
-                <li>
-                    <div class="hcd-list-img">
-                        <img src="../../public//img/Polygon 30.png" alt="">
-                    </div>
-                    <p class="redtext thick padded-white-bg margin-top-1">Job and Wealth
-                        Creation</p>
-                </li>
-            </ul>
-        </div>
-        <p class="whitetext">
-            LAMID Consulting is a non-profit management and leadership program with <br>
-            the interest in creating positive community development to build or accelerate.
+            <br>
+
+            This Event is channeled to a new market entrance and <br>
+            Career development & Progression, back to market.
         </p>
 
-        <div class="hcd-card scale-dwn">
-            <img src="../../public//img/Frame 6.png" alt="">
-        </div>
-    </div>
 
-    <div class="newbiz4section2">
-        <div class="innernewbiz4section2">
-            <h2 class="redtext thick">Social Impact by Cooperatives</h2>
-            <b>BIZ brands have created and accelerated several women and youth-led <br> and owned cooperatives.</b>
-
-
-
-            <div class="newbizbb">
-                <ul class="newbizbb-icon">
-                    <li>
-                        <div class="full-biz-img">
-                            <img src="../../public//img/Ellipse 9.png" alt="">
-                        </div>
-
-                    </li>
-                    <li>
-                        <div class="full-biz-img">
-                            <img src="../../public//img/Ellipse 10.png" alt="">
-                        </div>
-
-                    </li>
-
-                    <li class="full-biz-img">
-                        <div>
-                            <img src="../../public//img/Ellipse 11.png" alt="">
-                        </div>
-
-                    </li>
-                </ul>
-            </div>
-
-
-            <div class="d-div-holder-iii">
-                <div>
-                    <p>
-                        We use affordable,accessible, triple bottom line in BEST to integrate and position cooperatives
-                        to re-set globalization.
-                    </p>
-                </div>
-
-                <div>
-                    <p>
-                        Starting from few groups to communities and nations, we have continued to work with others to
-                        transform lives.
-                    </p>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-    <div class="newbizsection3">
-        <img src="../../public//img/social impact.png" alt="">
-    </div>
-    <div class="newbizsection4">
-        <div class="innernewbizsection4">
+        <div class="sub-section-1">
             <div>
-                <p><b>we have focused on innovation, technology, trade, and investment to achieve 25 years+ outcomes and
-                        impact enabling inclusive, sustainable human development.
-                    </b>
-                </p>
-                <img src="../../public//img/Rectangle 158.png" alt="">
+                <p class="header">Upcoming Events</p>
+
+
+                <button class="grey-btn-i">RESERVE SEAT</button>
+
             </div>
             <div>
-                <section>
-                    <p class="big-text">
-                        <b>Advice <br><br>
-                            Innovation <br><br>
-                            Funding. <br><br>
-                        </b>
+                <p class="header">Recent Events</p>
 
-                        <p class="thintext">
-                            You do not have to re-invent the wheel, see our proven successful transformations.
-                        </p>
-                    </p>
+                <div class="flexed-event">
+                    <section>
+                        <img src="../../public/img/Rectangle 172.png" alt="">
+                    </section>
+
+                    <button class="grey-btn-i  full-width">view event</button>
+                </div>
+
+                <div class="flexed-event">
+                    <button class="grey-btn-i  full-width">view event</button>
+
+                    <section>
+                        <img src="../../public/img/Rectangle 173.png" alt="">
+                    </section>
+                </div>
+            </div>
+        </div>
+
+        <div class="sub-section-2">
+            <section class="inner-sub-section">
+                <p class="header-i">RECENT JOB</p>
+                <div class="event-grid">
+                    <div>
+                        <div class="event-card-img">
+                            <img src="../../public/img/Rectangle 177.png" alt="">
+                        </div>
+                        <div class="event-card-img">
+                            <img src="../../public/img/Rectangle 176.png" alt="">
+                        </div>
+                    </div>
+
+                    <div>
+                        <div class="event-card-img">
+                            <img src="../../public/img/Rectangle 174.png" alt="">
+                        </div>
+                        <div class="event-card-img">
+                            <img src="../../public/img/Rectangle 176.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="buttons-holder">
+                        <button class="red-primary-btn">JOIN BIZ CLUB</button>
+
+                        <button class="red-primary-btn">JOIN JOB CLUB</button>
+                    </div>
+                </div>
+
+            </section>
+            <div>
+                <section class="red-border">
+                    <p class="header-i">JOB SEARCH CLINIC</p>
                 </section>
-                <img src="../../public//img/Rectangle 164.png" alt="">
             </div>
         </div>
     </div>
 
-    <div class="newbizwhitebg">
-        <div class="innernewbizwhitebg">
-            <div class="three-section-holder">
-                <div class="white-section">
-                    <p>Free
-                        <b>Business <br> Health </b> Check</p>
-                    <button>Signup for a free check</button>
-                </div>
-                <div class="red-bg">
-                    <p>
-                        JOB SEARCH <br>
-                        CLINIC
-                    </p>
-                </div>
-                <div class="white-section">
-                    <p>Lamid’s <b>Business</b> <br>
-                        Guides</p>
-                    <button>Shop for Guides</button>
-                </div>
-            </div>
 
-
-            <div class="newbizbb">
-                <ul class="newbizbb-icon scale-dwn">
-                    <li>
-                        <div class="full-biz-img">
-                            <img src="../../public//img/Ellipse 15.png" alt="">
-                        </div>
-
-                    </li>
-                    <li>
-                        <div class="full-biz-img">
-                            <img src="../../public//img/Ellipse 16.png" alt="">
-                        </div>
-
-                    </li>
-
-                    <li class="full-biz-img">
-                        <div>
-                            <img src="../../public//img/Ellipse 17.png" alt="">
-                        </div>
-
-                    </li>
-                </ul>
-            </div>
-
-            <div class="newbizbtm">
-                <div class="abls">
-                    <img src="../../public//img/Rectangle 166.png" alt="">
-                </div>
-                <img src="../../public//img/Group 131.png" alt="">
-            </div>
-        </div>
-    </div>
-
-    <div class="newbiz-darkbottom">
+    <div class="newbiz-darkbottom pic-bg">
         <div class="innernewbiz-darkbottom">
             <div class="newbiz-sub-section">
                 <div class="">
-                    <p class="thick">UPCOMING EVENTS</p>
-
-                    <button class="grey-btn-i">SEE EVENTS</button>
+                    <p class="thick big-text">HUMAN DEVELOPMENT</p>
                 </div>
                 <div>
                     <div>
@@ -272,9 +150,138 @@
             </div>
             <div class="newbiz-sub-section">
                 <div class="">
-                    <p class="thick">BUSINESS GUIDES</p>
+                    <p class="thick big-text">TRAINING</p>
+                </div>
+                <div>
+                    <div>
+                        <div class="newbiz-img">
+                            <img src="../../public//img/Polygon 22.png" alt="">
+                        </div>
+                        <button class="grey-btn">RESERVE SEAT</button>
+                    </div>
+                    <div>
+                        <div class="newbiz-img">
+                            <img src="../../public//img/Polygon 23.png" alt="">
+                        </div>
+                        <button class="grey-btn">RESERVE SEAT</button>
+                    </div>
+                    <div>
+                        <div class="newbiz-img">
+                            <img src="../../public//img/Polygon 25.png" alt="">
+                        </div>
+                        <button class="grey-btn">RESERVE SEAT</button>
+                    </div>
+                    <div>
+                        <div class="newbiz-img">
+                            <img src="../../public//img/Polygon 27.png" alt="">
+                        </div>
+                        <button class="grey-btn">RESERVE SEAT</button>
+                    </div>
+                </div>
 
-                    <button class="red-btn-i">SEE BUSINESS GUIDES</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="newbizsection3">
+        <img src="../../public//img/Frame 52 (1).png" alt="">
+    </div>
+
+    <div class="newbizsection4">
+        <div class="three-section-holder">
+            <div class="white-section">
+                <p>Free
+                    <b>Business <br> Health </b> Check</p>
+                <button>Signup for a free check</button>
+            </div>
+            <div class="red-bg">
+                <p>
+                    JOB SEARCH <br>
+                    CLINIC
+                </p>
+            </div>
+            <div class="white-section">
+                <p>Lamid’s <b>Business</b> <br>
+                    Guides</p>
+                <button>Shop for Guides</button>
+            </div>
+        </div>
+
+        <div class="width-60">
+            <div class="newbiz-sub-section">
+                <div class="width-80">
+                    <p class="thick big-text">UPCOMING EVENTS</p>
+                </div>
+                <div>
+                    <div>
+                        <div class="newbiz-img">
+                            <img src="../../public//img/Polygon 22.png" alt="">
+                        </div>
+                        <button class="grey-btn">RESERVE SEAT</button>
+                    </div>
+                    <div>
+                        <div class="newbiz-img">
+                            <img src="../../public//img/Polygon 23.png" alt="">
+                        </div>
+                        <button class="grey-btn">RESERVE SEAT</button>
+                    </div>
+                    <div>
+                        <div class="newbiz-img">
+                            <img src="../../public//img/Polygon 25.png" alt="">
+                        </div>
+                        <button class="grey-btn">RESERVE SEAT</button>
+                    </div>
+                    <div>
+                        <div class="newbiz-img">
+                            <img src="../../public//img/Polygon 27.png" alt="">
+                        </div>
+                        <button class="grey-btn">RESERVE SEAT</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="back-bg">
+        <div class="width-60 inner-back-bg">
+            <div class="newbiz-sub-section">
+                <div class="">
+                    <p class="thick white-text big-text">BUSINESS GUIDES</p>
+                </div>
+                <div class="centered-flex">
+                    <div>
+                        <div class="newbiz-img">
+                            <img src="../../public/img/Rectangle 168.png" alt="">
+                        </div>
+                        <button class="red-btn">PURCHASE</button>
+                    </div>
+                    <div>
+                        <div class="newbiz-img">
+                            <img src="../../public/img/Rectangle 168.png" alt="">
+                        </div>
+                        <button class="red-btn">PURCHASE</button>
+                    </div>
+                    <div>
+                        <div class="newbiz-img">
+                            <img src="../../public/img/Rectangle 168.png" alt="">
+                        </div>
+                        <button class="red-btn">PURCHASE</button>
+                    </div>
+                    <div>
+                        <div class="newbiz-img">
+                            <img src="../../public/img/Rectangle 168.png" alt="">
+                        </div>
+                        <button class="red-btn">PURCHASE</button>
+                    </div>
+                </div>
+            </div>
+
+            <p class="white-text center-text">Grow your business with plan and strategy templates tailored for you</p>
+
+            <div class="newbiz-sub-section">
+                <div class="">
+                    <p class="thick white-text">RECENT GUIDES</p>
                 </div>
                 <div>
                     <div>
@@ -302,12 +309,13 @@
                         <button class="red-btn">PURCHASE</button>
                     </div>
                 </div>
-
             </div>
 
+           <div class="full-width centered-flex">
+            <button class="classic-btn">SEE BUSINESS GUIDES</button>
+           </div>
         </div>
     </div>
-
 
     <section class="down-grid">
         <div class="inner-down-grid-holder">
