--- a/laravel/resources/views/newbiz.html
+++ b/laravel/resources/views/newbiz.html
@@ -170,9 +170,9 @@
         <div class="inside-bzdaark">
             <div class="flexed gapped">
                 <div class="bizcard-white">
-                    <h2>BIZ for Market Access</h2>
+                    <h2 class="red-text">BIZ for Market Access</h2>
 
-                    <p>
+                    <p class="red-text">
                         We handhold SMEs to find their niche and access and dominate the market with lasting brands; We
                         show effective ways to drive lead generation and create conversions BIZ builds the entrepreneur
                         and the enterprise capacity for a timely response to market opportunities, and propels them
