--- a/laravel/resources/views/newbiz4bbgr.html
+++ b/laravel/resources/views/newbiz4bbgr.html
@@ -272,37 +272,34 @@
             </div>
             <div class="newbiz-sub-section">
                 <div class="">
-                    <p class="thick">BUSINESS GUIDES</p>
-
-                    <button class="red-btn-i">SEE BUSINESS GUIDES</button>
+                    <p class="thick white-text big-text">BUSINESS GUIDES</p>
                 </div>
-                <div>
+                <div class="centered-flex">
                     <div>
                         <div class="newbiz-img">
-                            <img src="../../public/img/Rectangle 168.png" alt="">
+                            <img src="../../public/img/Rectangle 168 (1).png" alt="">
                         </div>
                         <button class="red-btn">PURCHASE</button>
                     </div>
                     <div>
                         <div class="newbiz-img">
-                            <img src="../../public/img/Rectangle 168.png" alt="">
+                            <img src="../../public/img/Rectangle 169.png" alt="">
                         </div>
                         <button class="red-btn">PURCHASE</button>
                     </div>
                     <div>
                         <div class="newbiz-img">
-                            <img src="../../public/img/Rectangle 168.png" alt="">
+                            <img src="../../public/img/Rectangle 170.png" alt="">
                         </div>
                         <button class="red-btn">PURCHASE</button>
                     </div>
                     <div>
                         <div class="newbiz-img">
-                            <img src="../../public/img/Rectangle 168.png" alt="">
+                            <img src="../../public/img/Rectangle 171.png" alt="">
                         </div>
                         <button class="red-btn">PURCHASE</button>
                     </div>
                 </div>
-
             </div>
 
         </div>
