--- a/laravel/resources/views/newbusinessplan.html
+++ b/laravel/resources/views/newbusinessplan.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../public/styles/newbiz.css">
     <link rel="stylesheet" href="../../public/styles/newhcd.css">
     <link rel="stylesheet" type="text/css" href="../../public/styles/newevent.css">
+    <link rel="stylesheet" type="text/css" href="../../public/styles/newbusinessplan.css">
     <link rel="stylesheet" type="text/css" href="../../public/styles/newbiz4bbgr.css">
     <link rel="stylesheet" type="text/css" href="../../public/styles/newaboutus.css">
 </head>
@@ -34,50 +35,56 @@
             <img src="../../public/img/logo (1).png" alt="">
         </div>
         <h1>
-            OUR EVENTS
+            BUSINESS PLANS
         </h1>
         <p class="thin">
-            Exploring the ideas of shaping tomorrow's <br> opportunities
-
-            <br>
-
-            This Event is channeled to a new market entrance and <br>
-            Career development & Progression, back to market.
+            BIZ brands have increased export income potentials from new markets <br>
+            with a clear pathway for making our BIZ alumni dominate the <br>
+            African Free Continental Trade Area (AfTA): <br>
         </p>
 
 
-        <div class="sub-section-1">
-            <div>
-                <p class="header">Upcoming Events</p>
-
-
-                <button class="grey-btn-i">RESERVE SEAT</button>
-
-            </div>
-            <div>
-                <p class="header">Recent Events</p>
-
-                <div class="flexed-event">
-                    <section>
-                        <img src="../../public/img/Rectangle 172.png" alt="">
-                    </section>
-
-                    <button class="grey-btn-i  full-width">view event</button>
+        <div class="subb-section">
+            <div class="subb-inner">
+                <div class="subb-section-image-holder">
+                    <p class="full-width heading-normal">RECENT PLANS</p>
+                    <img src="../../public/img/Rectangle 240.png" alt="">
                 </div>
+                <div>
+                    <button class="grey-b-btn">
+                        PURCHASE PLAN
+                    </button>
+                    <button class="grey-b-btn">
+                        ABOUT PLAN
+                    </button>
+                </div>
+            </div>
 
-                <div class="flexed-event">
-                    <button class="grey-btn-i  full-width">view event</button>
 
-                    <section>
+            <div class="subb-inner">
+                <p class="heading-normal margin-top-1">BUSINESS EVENTS</p>
+                <div class="subb-inner-flex">
+                    <div class="img-ii">
+                        <img src="../../public/img/Rectangle 172.png" alt="">
+                    </div>
+                    <button class="grey-b-btn">VIEW EVENTS</button>
+                </div>
+                <div class="subb-inner-flex">
+                    <button class="grey-b-btn">VIEW EVENTS</button>
+                    <div class="img-ii">
                         <img src="../../public/img/Rectangle 173.png" alt="">
-                    </section>
+                    </div>
                 </div>
             </div>
         </div>
 
+        <p>
+            Launch out and connect to join the BIZphere community now, <a href="" class="red-text">click here.</a>
+        </p>
+
         <div class="sub-section-2">
-            <section class="inner-sub-section">
-                <p class="header-i">RECENT JOB</p>
+            <section class="inner-sub-section paddimg-1">
+                <p class="header-i full-width left-text">RECENT PLANS</p>
                 <div class="event-grid">
                     <div>
                         <div class="event-card-img">
@@ -98,8 +105,6 @@
                     </div>
 
                     <div class="buttons-holder">
-                        <button class="red-primary-btn">JOIN BIZ CLUB</button>
-
                         <button class="red-primary-btn">JOIN JOB CLUB</button>
                     </div>
                 </div>
@@ -114,77 +119,93 @@
     </div>
 
 
-    <div class="newbiz-darkbottom pic-bg">
+    <div class="newEevent">
         <div class="innernewbiz-darkbottom">
             <div class="newbiz-sub-section">
                 <div class="">
-                    <p class="thick big-text">HUMAN DEVELOPMENT</p>
+                    <p class="thick big-text">HUMAN CAPITAL DEVELOPMENT</p>
                 </div>
                 <div>
                     <div>
                         <div class="newbiz-img">
                             <img src="../../public//img/Polygon 22.png" alt="">
                         </div>
-                        <button class="grey-btn">RESERVE SEAT</button>
+                        <div class="subbb-btn-holder">
+                            <button class="grey-btn-smaller">PURCHASE</button>
+                            <button class="grey-btn-smaller">ABOUT</button>
+                        </div>
                     </div>
                     <div>
                         <div class="newbiz-img">
                             <img src="../../public//img/Polygon 23.png" alt="">
                         </div>
-                        <button class="grey-btn">RESERVE SEAT</button>
+                        <div class="subbb-btn-holder">
+                            <button class="grey-btn-smaller">PURCHASE</button>
+                            <button class="grey-btn-smaller">ABOUT</button>
+                        </div>
                     </div>
                     <div>
                         <div class="newbiz-img">
                             <img src="../../public//img/Polygon 25.png" alt="">
                         </div>
-                        <button class="grey-btn">RESERVE SEAT</button>
+                        <div class="subbb-btn-holder">
+                            <button class="grey-btn-smaller">PURCHASE</button>
+                            <button class="grey-btn-smaller">ABOUT</button>
+                        </div>
                     </div>
                     <div>
                         <div class="newbiz-img">
                             <img src="../../public//img/Polygon 27.png" alt="">
                         </div>
-                        <button class="grey-btn">RESERVE SEAT</button>
+                        <div class="subbb-btn-holder">
+                            <button class="grey-btn-smaller">PURCHASE</button>
+                            <button class="grey-btn-smaller">ABOUT</button>
+                        </div>
                     </div>
-                </div>
-
-            </div>
-            <div class="newbiz-sub-section">
-                <div class="">
-                    <p class="thick big-text">TRAINING</p>
-                </div>
-                <div>
                     <div>
                         <div class="newbiz-img">
                             <img src="../../public//img/Polygon 22.png" alt="">
                         </div>
-                        <button class="grey-btn">RESERVE SEAT</button>
+                        <div class="subbb-btn-holder">
+                            <button class="grey-btn-smaller">PURCHASE</button>
+                            <button class="grey-btn-smaller">ABOUT</button>
+                        </div>
                     </div>
                     <div>
                         <div class="newbiz-img">
                             <img src="../../public//img/Polygon 23.png" alt="">
                         </div>
-                        <button class="grey-btn">RESERVE SEAT</button>
+                        <div class="subbb-btn-holder">
+                            <button class="grey-btn-smaller">PURCHASE</button>
+                            <button class="grey-btn-smaller">ABOUT</button>
+                        </div>
                     </div>
                     <div>
                         <div class="newbiz-img">
                             <img src="../../public//img/Polygon 25.png" alt="">
                         </div>
-                        <button class="grey-btn">RESERVE SEAT</button>
+                        <div class="subbb-btn-holder">
+                            <button class="grey-btn-smaller">PURCHASE</button>
+                            <button class="grey-btn-smaller">ABOUT</button>
+                        </div>
                     </div>
                     <div>
                         <div class="newbiz-img">
                             <img src="../../public//img/Polygon 27.png" alt="">
                         </div>
-                        <button class="grey-btn">RESERVE SEAT</button>
+                        <div class="subbb-btn-holder">
+                            <button class="grey-btn-smaller">PURCHASE</button>
+                            <button class="grey-btn-smaller">ABOUT</button>
+                        </div>
                     </div>
-                </div>
 
+                </div>
             </div>
         </div>
     </div>
 
     <div class="newbizsection3">
-        <img src="../../public//img/Frame 52 (1).png" alt="">
+        <img src="../../public//img/Frame 52 (2).png" alt="">
     </div>
 
     <div class="newbizsection4">
@@ -202,41 +223,65 @@
             </div>
             <div class="white-section">
                 <p>Lamid’s <b>Business</b> <br>
-                    Guides</p>
-                <button>Shop for Guides</button>
+                    Plans</p>
+                <button>Shop for Plans</button>
             </div>
         </div>
 
         <div class="width-60">
             <div class="newbiz-sub-section">
                 <div class="width-80">
-                    <p class="thick big-text">UPCOMING EVENTS</p>
                 </div>
-                <div>
+                <div class="centered-flex">
                     <div>
                         <div class="newbiz-img">
-                            <img src="../../public//img/Polygon 22.png" alt="">
+                            <img src="../../public/img/Rectangle 168 (1).png" alt="">
                         </div>
-                        <button class="grey-btn">RESERVE SEAT</button>
+                        <button class="red-btn">PURCHASE</button>
                     </div>
                     <div>
                         <div class="newbiz-img">
-                            <img src="../../public//img/Polygon 23.png" alt="">
+                            <img src="../../public/img/Rectangle 169.png" alt="">
                         </div>
-                        <button class="grey-btn">RESERVE SEAT</button>
+                        <button class="red-btn">PURCHASE</button>
                     </div>
                     <div>
                         <div class="newbiz-img">
-                            <img src="../../public//img/Polygon 25.png" alt="">
+                            <img src="../../public/img/Rectangle 170.png" alt="">
                         </div>
-                        <button class="grey-btn">RESERVE SEAT</button>
+                        <button class="red-btn">PURCHASE</button>
                     </div>
                     <div>
                         <div class="newbiz-img">
-                            <img src="../../public//img/Polygon 27.png" alt="">
+                            <img src="../../public/img/Rectangle 171.png" alt="">
                         </div>
-                        <button class="grey-btn">RESERVE SEAT</button>
+                        <button class="red-btn">PURCHASE</button>
                     </div>
+                    <div>
+                        <div class="newbiz-img">
+                            <img src="../../public/img/Rectangle 168 (1).png" alt="">
+                        </div>
+                        <button class="red-btn">PURCHASE</button>
+                    </div>
+                    <div>
+                        <div class="newbiz-img">
+                            <img src="../../public/img/Rectangle 169.png" alt="">
+                        </div>
+                        <button class="red-btn">PURCHASE</button>
+                    </div>
+                    <div>
+                        <div class="newbiz-img">
+                            <img src="../../public/img/Rectangle 170.png" alt="">
+                        </div>
+                        <button class="red-btn">PURCHASE</button>
+                    </div>
+                    <div>
+                        <div class="newbiz-img">
+                            <img src="../../public/img/Rectangle 171.png" alt="">
+                        </div>
+                        <button class="red-btn">PURCHASE</button>
+                    </div>
+
                 </div>
 
             </div>
@@ -311,9 +356,9 @@
                 </div>
             </div>
 
-           <div class="full-width centered-flex">
-            <button class="classic-btn">SEE BUSINESS GUIDES</button>
-           </div>
+            <div class="full-width centered-flex">
+                <button class="classic-btn">SEE BUSINESS GUIDES</button>
+            </div>
         </div>
     </div>
 
