--- a/laravel/public/styles/newevent.css
+++ b/laravel/public/styles/newevent.css
@@ -13,6 +13,10 @@
     padding: 1rem 0px;
 }
 
+.event-section-1 h1{
+    margin-top: 5rem;
+}
+
 .thin {
     font-weight: 200;
 }
@@ -242,8 +246,6 @@
 }
 
 
-
-
 @media (max-width: 768px) {
 
 .logo{
@@ -285,6 +287,9 @@
 }
 
 
+.event-section-1 h1{
+    margin-top: 0rem;
+}
 
 
 }
