contact page done

--- a/laravel/resources/views/newevent.html
+++ b/laravel/resources/views/newevent.html
@@ -39,10 +39,7 @@
         <p class="thin">
             Exploring the ideas of shaping tomorrow's <br> opportunities
 
-            <br>
-
-            This Event is channeled to a new market entrance and <br>
-            Career development & Progression, back to market.
+            <br> This Event is channeled to a new market entrance and <br> Career development & Progression, back to market.
         </p>
 
 
@@ -196,13 +193,12 @@
             </div>
             <div class="red-bg">
                 <p>
-                    JOB SEARCH <br>
-                    CLINIC
+                    JOB SEARCH <br> CLINIC
                 </p>
             </div>
             <div class="white-section">
-                <p>Lamid’s <b>Business</b> <br>
-                    Guides</p>
+                <p>Lamid’s <b>Business</b> <br> Guides
+                </p>
                 <button>Shop for Guides</button>
             </div>
         </div>
@@ -311,9 +307,9 @@
                 </div>
             </div>
 
-           <div class="full-width centered-flex">
-            <button class="classic-btn">SEE BUSINESS GUIDES</button>
-           </div>
+            <div class="full-width centered-flex">
+                <button class="classic-btn">SEE BUSINESS GUIDES</button>
+            </div>
         </div>
     </div>
 
@@ -350,11 +346,21 @@
                 <img src="../../public/img/logo (1).png" alt="">
             </div>
             <ul class="socials">
-                <li><a href=""><img src="../../public/img/Rectangle 178.png" alt=""></a></li>
-                <li><a href=""><img src="../../public/img/Rectangle 179.png" alt=""></a></li>
-                <li><a href=""><img src="../../public/img/Rectangle 180.png" alt=""></a></li>
-                <li><a href=""><img src="../../public/img/Rectangle 181.png" alt=""></a></li>
-                <li><a href=""><img src="../../public/img/Rectangle 182.png" alt=""></a></li>
+                <li>
+                    <a href=""><img src="../../public/img/Rectangle 178.png" alt=""></a>
+                </li>
+                <li>
+                    <a href=""><img src="../../public/img/Rectangle 179.png" alt=""></a>
+                </li>
+                <li>
+                    <a href=""><img src="../../public/img/Rectangle 180.png" alt=""></a>
+                </li>
+                <li>
+                    <a href=""><img src="../../public/img/Rectangle 181.png" alt=""></a>
+                </li>
+                <li>
+                    <a href=""><img src="../../public/img/Rectangle 182.png" alt=""></a>
+                </li>
             </ul>
         </div>
 
@@ -455,7 +461,6 @@
         hamburger.addEventListener('click', () => {
             menu.classList.toggle('collapsed');
         });
-
     </script>
 </body>
 
